--- a/examples/kriging-contour/index.html
+++ b/examples/kriging-contour/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>克里金 kriging-js 示例</title>
+    <title>克里金 kriging-contour 示例</title>
     <link
       href="https://cdn.bootcdn.net/ajax/libs/openlayers/4.6.5/ol.css"
       rel="stylesheet"
     />
     <script src="https://cdn.bootcdn.net/ajax/libs/openlayers/4.6.5/ol.js"></script>
-    <script src="./oeo4b-kriging.js"></script>
+    <script src="./kriging-contour.js"></script>
     <script src="./../data/data.js"></script>
     <script src="./../data/yn.js"></script>
     <style>
@@ -35,9 +35,13 @@
         >
           克里金插值
         </button>
-        <!-- <button class="button" onclick="showKrigingImage()">
-          克里金图像(Image)
-        </button> -->
+        <button
+          class="button"
+          id="showKrigingImage"
+          onclick="showKrigingImage()"
+        >
+          克里金图像
+        </button>
       </div>
     </div>
     <script src="./index.js"></script>
