--- a/examples/kriging-wasm/index.html
+++ b/examples/kriging-wasm/index.html
@@ -13,7 +13,7 @@
     <script src="./../data/yn.js"></script>
     <style>
       #map {
-        height: 100%;
+        height: 90vh;
         width: 100%;
         position: relative;
       }
